tests/rosetta/transpiler/Kotlin/ackermann-function-3.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:2:19: error: unresolved reference: bigint
fun pow_big(base: bigint, exp: Int): bigint {
                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:2:38: error: unresolved reference: bigint
fun pow_big(base: bigint, exp: Int): bigint {
                                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:3:17: error: unresolved reference: bigint
    var result: bigint = 1
                ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:4:12: error: unresolved reference: bigint
    var b: bigint = base
           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:13:22: error: unresolved reference: bigint
    return result as bigint
                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:16:16: error: unresolved reference: bigint
fun bit_len(x: bigint): Int {
               ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:17:12: error: unresolved reference: bigint
    var n: bigint = x
           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:26:19: error: unresolved reference: bigint
fun ackermann2(m: bigint, n: bigint): bigint {
                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:26:30: error: unresolved reference: bigint
fun ackermann2(m: bigint, n: bigint): bigint {
                             ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:26:39: error: unresolved reference: bigint
fun ackermann2(m: bigint, n: bigint): bigint {
                                      ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:28:21: error: unresolved reference: bigint
        return 0 as bigint
                    ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:31:17: error: unresolved reference: int
        val mi: int = m.toInt()
                ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:33:38: error: unresolved reference: bigint
            return (n as Int) + 1 as bigint
                                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:36:38: error: unresolved reference: bigint
            return (n as Int) + 2 as bigint
                                     ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:39:44: error: unresolved reference: bigint
            return (2 * (n as Int)) + 3 as bigint
                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:45:29: error: unresolved reference: bigint
                return 0 as bigint
                            ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:47:34: error: unresolved reference: bigint
            val r = pow_big(2 as bigint, n.toInt() as Int)
                                 ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:48:44: error: unresolved reference: bigint
            return (8 * (r as Int)) - 3 as bigint
                                           ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:52:59: error: unresolved reference: bigint
        return ackermann2((m as Number).toDouble() - 1 as bigint, 1 as bigint) as bigint
                                                          ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:52:72: error: unresolved reference: bigint
        return ackermann2((m as Number).toDouble() - 1 as bigint, 1 as bigint) as bigint
                                                                       ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:52:83: error: unresolved reference: bigint
        return ackermann2((m as Number).toDouble() - 1 as bigint, 1 as bigint) as bigint
                                                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:54:55: error: unresolved reference: bigint
    return ackermann2((m as Number).toDouble() - 1 as bigint, ackermann2(m, (n as Number).toDouble() - 1 as bigint)) as bigint
                                                      ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:54:109: error: unresolved reference: bigint
    return ackermann2((m as Number).toDouble() - 1 as bigint, ackermann2(m, (n as Number).toDouble() - 1 as bigint)) as bigint
                                                                                                            ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:54:121: error: unresolved reference: bigint
    return ackermann2((m as Number).toDouble() - 1 as bigint, ackermann2(m, (n as Number).toDouble() - 1 as bigint)) as bigint
                                                                                                                        ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:59:31: error: unresolved reference: bigint
    val res = ackermann2(m as bigint, n as bigint)
                              ^
/workspace/mochi/tests/rosetta/transpiler/Kotlin/ackermann-function-3.kt:59:44: error: unresolved reference: bigint
    val res = ackermann2(m as bigint, n as bigint)
                                           ^
